--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "larvitbase-www",
-  "version": "0.7.8",
+  "version": "0.8.0",
   "description": "Website framework based on larvitbase",
   "main": "index.js",
   "scripts": {
-    "test": "./node_modules/tape/bin/tape ./test/*"
+    "lint": "eslint *.js test/*.js",
+    "test:unit": "tape ./test/*.js",
+    "coverage": "nyc npm run test:unit",
+    "test": "npm run lint && npm run coverage"
   },
   "repository": {
     "type": "git",
@@ -27,22 +30,19 @@
   },
   "homepage": "https://github.com/larvit/larvitbase-www#readme",
   "dependencies": {
-    "ejs": "git+https://github.com/larvit/ejs.git#24ea30276fdfa64737985e58031b6f3b4981b1e5",
-    "larvitbase": "^3.1.3",
-    "larvitfs": "^2.3.1",
-    "larvitreqparser": "^0.4.13",
-    "larvitrouter": "^3.0.1",
-    "larvitutils": "^2.1.1",
-    "lodash": "^4.17.11",
-    "send": "^0.17.0"
+    "ejs": "3.1.6",
+    "larvitbase": "4.0.0",
+    "larvitreqparser": "0.5.0",
+    "larvitrouter": "5.1.1",
+    "larvitutils": "5.0.0",
+    "lodash": "4.17.21",
+    "send": "0.17.2"
   },
   "devDependencies": {
-    "async": "3.2.0",
-    "coveralls": "3.1.0",
-    "eslint": "6.8.0",
-    "istanbul": "0.4.5",
-    "request": "2.88.2",
-    "tape": "4.13.3",
-    "tape-eslint": "1.2.1"
+    "async": "3.2.3",
+    "axios": "0.26.0",
+    "eslint": "8.9.0",
+    "nyc": "15.1.0",
+    "tape": "5.5.2"
   }
 }
